[package]
authors = ["m4b <m4b.github.io@gmail.com>", "Richo Healey <richo@psych0tik.net>"]
description = "High level bindings to capstone disassembly engine (http://capstone-engine.org/)"
documentation = "http://richo.psych0tik.net/capstone-rs/capstone/index.html"
license = "MIT"
name = "capstone"
repository = "https://github.com/capstone-rust/capstone-rs"
version = "0.0.6"

[dependencies]
libc = "0.2"
capstone-sys =  {git = "https://github.com/felberj/capstone-sys.git", rev = "0b7cf9e72f7136ba7d49bdf6370fb5ac77b2ada4"}

# Not actually a dependency, but this makes the more complicated examples work
[dev-dependencies]
macho = "0.*"

[features]
default = []
use_system_capstone = ["capstone-sys/use_system_capstone"]
build_capstone_cmake = ["capstone-sys/build_capstone_cmake"]
